--- a/src/esmx_basic/CMakeLists.txt
+++ b/src/esmx_basic/CMakeLists.txt
@@ -1,17 +1,17 @@
 include(ExternalProject)
 
-ExternalProject_Add(comp1
-  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/COMP1
-  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/COMP1
+ExternalProject_Add(esmx_comp1
+  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/ESMX_COMP1
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ESMX_COMP1
   CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}
              -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
   BUILD_ALWAYS TRUE
   EXCLUDE_FROM_ALL FALSE
 )
 
-ExternalProject_Add(comp2
-  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/COMP2
-  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/COMP2
+ExternalProject_Add(esmx_comp2
+  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/ESMX_COMP2
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ESMX_COMP2
   CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}
              -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
   BUILD_ALWAYS TRUE
@@ -28,7 +28,7 @@ else()
                -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}
                -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
     BUILD_ALWAYS TRUE
-    DEPENDS comp1 comp2
+    DEPENDS esmx_comp1 esmx_comp2
     EXCLUDE_FROM_ALL FALSE
   )
 
