--- a/input/esmxRunBasic.yml
+++ b/input/esmxRunBasic.yml
@@ -24,7 +24,7 @@ attributes: &common
   Verbosity:  low
 
 C1:
-  model:            COMP1
+  model:            ESMX_COMP1
   ompNumThreads:    4
   attributes:
     <<: *common
@@ -32,7 +32,7 @@ C1:
   petList:          [3, [2-0]]
 
 C2:
-  model:            COMP2
+  model:            ESMX_COMP2
   petList:          [0-1, 3]
   attributes:
     <<: *common
