--- a/input/reconcile_partialoverlap_6cmp100fld.cfg
+++ b/input/reconcile_partialoverlap_6cmp100fld.cfg
@@ -1,8 +1,8 @@
-compCount: 5  # number of components
+compCount: 6  # number of components
 
 # component 01
 <comp-01:
-  petListBoundsRel: 0 0.3
+  petListBoundsRel: 0.0 0.2
   stateMembers: fields-A
   <fields-A:
     count: 100
@@ -13,7 +13,7 @@ compCount: 5  # number of components
 
 # component 02
 <comp-02:
-  petListBoundsRel: 0.2 0.5
+  petListBoundsRel: 0.1 0.3
   stateMembers: fields-B
   <fields-B:
     count: 100
@@ -24,7 +24,7 @@ compCount: 5  # number of components
 
 # component 03
 <comp-03:
-  petListBoundsRel: 0.4 0.7
+  petListBoundsRel: 0.2 0.5
   stateMembers: fields-C
   <fields-C:
     count: 100
@@ -35,7 +35,7 @@ compCount: 5  # number of components
 
 # component 04
 <comp-04:
-  petListBoundsRel: 0.6 0.9
+  petListBoundsRel: 0.4 0.6
   stateMembers: fields-D
   <fields-D:
     count: 100
@@ -46,7 +46,7 @@ compCount: 5  # number of components
 
 # component 05
 <comp-05:
-  petListBoundsRel: 0.8 1.0
+  petListBoundsRel: 0.5 1.0
   stateMembers: fields-E
   <fields-E:
     count: 100
@@ -54,3 +54,14 @@ compCount: 5  # number of components
     geom: grid-E
   :fields-E>
 :comp-05>
+
+# component 06
+<comp-06:
+  petListBoundsRel: 0.6 1.0
+  stateMembers: fields-F
+  <fields-F:
+    count: 100
+    typekind: R8
+    geom: grid-F
+  :fields-F>
+:comp-06>
