Fix case sensitivity issues for esmx_comps
* update env-auto for derecho compute nodes
* update ESMF target for older versions of FindESMF.cmake

--- a/src/esmx_basic/CMakeLists.txt
+++ b/src/esmx_basic/CMakeLists.txt
@@ -1,8 +1,8 @@
 include(ExternalProject)
 
 ExternalProject_Add(esmx_comp1
-  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/ESMX_COMP1
-  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ESMX_COMP1
+  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/esmx_comp1
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/esmx_comp1
   CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}
              -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
   BUILD_ALWAYS TRUE
@@ -10,8 +10,8 @@ ExternalProject_Add(esmx_comp1
 )
 
 ExternalProject_Add(esmx_comp2
-  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/ESMX_COMP2
-  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ESMX_COMP2
+  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/esmx_comp2
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/esmx_comp2
   CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}
              -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
   BUILD_ALWAYS TRUE
