Update ESMF Performance Test script
* introduce user defined name
* introduce testsuite
* print results as table
* include ESMF profiling (default: on)
* include test options: repeat, executable, arguments, timeout,
  inputdata, mpi, mpinp
* introduce template feature for inputdata
* move build directory to esmfmkfile digest
* move tests to src
* update examples/basic.yml

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,12 @@ project(ESMF-PERFORMANCE-TESTS
         LANGUAGES Fortran)
 
 include(CTest)
+find_package(MPI)
 
 add_subdirectory(hello_world)
 add_subdirectory(esmf_initialize)
+
+file(GLOB_RECURSE TEST_INCLUDE_LIST "${CMAKE_CURRENT_BINARY_DIR}/testcfg/*.cmake")
+foreach(TEST_INCLUDE IN LISTS TEST_INCLUDE_LIST)
+  include(${TEST_INCLUDE})
+endforeach()
