Add format option for results table
* add csv output format for results
* update examples

--- a/examples/reconcile_mpi4np.yml
+++ b/examples/reconcile_mpi4np.yml
@@ -3,6 +3,7 @@
 name: "reconcile-mpi4np"
 # esmf: <path_to_esmf>
 profile: on
+results: {format: csv}
 
 define: &esmf_reconcile
   executable: esmf_reconcile
