--- a/examples/reconcile_mpi32768np.yml
+++ b/examples/reconcile_mpi32768np.yml
@@ -3,6 +3,7 @@
 name: "reconcile-mpi32768np"
 # esmf: <path_to_esmf>
 profile: on
+results: {format: csv}
 
 define: &esmf_reconcile
   executable: esmf_reconcile
