--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ where = ["src"]
 namespaces = true
 
 [tool.setuptools.package-data]
+"esmftk.wrapper" = ["*"]
 "esmftk.tests" = ["*"]
 "esmftk.tests.cmake" = ["*"]
 "esmftk.tests.esmf_initialize" = ["*"]
